<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".contents.MainFragment">

    <!-- TODO: Update blank fragment layout -->
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_fileName="lotto_main.json"
        app:layout_constraintHeight_percent=".25"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"  />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/homeBtn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".15"
        android:layout_margin="16dp"
        android:background="@drawable/custom_background"
        android:text="@string/home"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/aboutBtn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintHeight_percent=".15"
        android:background="@drawable/custom_background"
        android:text="@string/about"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@+id/homeBtn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/tipsBtn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintHeight_percent=".15"
        android:background="@drawable/custom_background"
        android:text="@string/tips"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@+id/aboutBtn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/historyBtn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:background="@drawable/custom_background"
        android:text="@string/history"
        app:layout_constraintHeight_percent=".15"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@+id/tipsBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>