<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".contents.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guide1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".15">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/custom_background_button"
            android:backgroundTint="@color/app_green"
            android:gravity="center"
            android:text="@string/_6_45"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:shadowRadius="3"
            android:shadowColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/star_noto"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:layout_editor_absoluteX="-16dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guide2"
        app:layout_constraintStart_toEndOf="@+id/guide1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".15">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/custom_background_button"
            android:backgroundTint="@color/app_blue"
            android:gravity="center"
            android:text="@string/_6_49"
            android:textColor="@color/white"
            android:shadowRadius="3"
            android:shadowColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/super_nlotto"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:layout_editor_absoluteX="-16dp"
            tools:textColor="@color/black" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guide3"
        app:layout_constraintStart_toStartOf="@+id/guide2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".15">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/custom_background_button"
            android:backgroundTint="@color/app_red"
            android:gravity="center"
            android:text="@string/_6_45"
            android:textColor="@color/white"
            android:shadowRadius="3"
            android:shadowColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/mini_nloto"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:layout_editor_absoluteX="-16dp"
            tools:textColor="@color/black" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guide4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".15">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/custom_background_button"
            android:backgroundTint="@color/app_yellow"
            android:gravity="center"
            android:text="@string/_6_45"
            android:shadowRadius="3"
            android:shadowColor="@color/black"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/mark_nsix"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:layout_editor_absoluteX="-16dp"
            tools:textColor="@color/black" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guide4"
        app:layout_constraintStart_toStartOf="@+id/guide3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".15">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/custom_background_button"
            android:backgroundTint="@color/app_violet"
            android:gravity="center"
            android:text="@string/_6_58"
            android:shadowRadius="3"
            android:shadowColor="@color/black"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mego_nloto"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:layout_editor_absoluteX="-16dp"
            tools:textColor="@color/black" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".2"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".4"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".6"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".8"/>

</androidx.constraintlayout.widget.ConstraintLayout>